# deep_learning

./: img.ipynb  pyproject.toml  tumor.ipynb
DNN/: tinyAdamSGD.ipynb
exercise/: NLTK.ipynb  img_sad_happy.ipynb
