[tool.poetry]
name = "deep-learning"
version = "0.1.0"
description = ""
authors = ["alialibakhshi <alialibakhshi9898@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.1"
numpy = "^2.2.4"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
torch = "^2.6.0"
torchvision = "^0.21.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
